--- a/app/views/static_pages/how_to_use.html.erb
+++ b/app/views/static_pages/how_to_use.html.erb
@@ -52,7 +52,7 @@
         <section>
             <h2>環境変数にトークンを保存</h2>
             <p>以下のコマンドでホームディレクトリ直下にstl_configというファイルを作成しトークンを保存します。</p>
-            <pre><code>stl configure <%= current_user.custom_token %></code><button class="btn btn-xs btn-outline copy-button">Copy</button></pre><br>
+            <pre><code>stl configure <%= current_user.custom_token %> https://studyline-cc21ae1829fc.herokuapp.com/api/study_sessions</code><button class="btn btn-xs btn-outline copy-button">Copy</button></pre><br>
         </section>
 
         <section>
